--- a/style.css
+++ b/style.css
@@ -5,18 +5,45 @@ html {
 
 body {
   color: #2e2e2e;
+  font-family: "Inter Tight", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
 }
 
 button {
   color: #2e2e2e;
+  cursor: pointer;
+}
+
+h1 {
+  margin: 0;
+  text-align: center;
+}
+
+h2 {
+  margin-top: 0;
+  font-weight: normal;
+  text-align: center;
+}
+
+.nav-bar {
+  padding: 1rem;
+  margin-bottom: 1rem;
+  border-bottom: 1px solid #eee;
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.05);
+}
+
+.nav-bar h1 {
+  font-size: 1.5rem;
+  font-weight: 600;
 }
 
 .main {
   padding: 1.5rem;
 }
 
-h1 {
-  margin: 0;
+.generic-section + .generic-section {
+  margin-top: 5rem;
 }
 
 .generic-container {
@@ -28,15 +55,20 @@ h1 {
   align-items: center;
 }
 
-.rep-tracker {
+.info-container {
   display: flex;
   gap: 1rem;
   align-items: center;
 }
 
-.rep-tracker__item {
+.info-item {
   font-size: 2rem;
   font-weight: bold;
+  width: 40px;
+}
+
+.info-item__separator {
+  width: auto;
 }
 
 .timer__item {
@@ -51,7 +83,29 @@ h1 {
   border-radius: 0.5rem;
   width: 100%;
 
-  cursor: pointer;
+  transition: 0.2s ease all;
+
+  font-weight: 600;
+}
+
+.button:hover {
+  opacity: 90%;
+}
+
+.button.is-stopped {
+  background-color: #dcfce7;
+}
+
+.button.is-running {
+  background-color: #fef3c7;
+}
+
+.button.timer-reset {
+  background: #fee2e2;
+}
+
+.button.add-rep {
+  background-color: #dbeafe;
 }
 
 .button--link {
